--- a/src/Components/VideoConference/Videos/Videos.css
+++ b/src/Components/VideoConference/Videos/Videos.css
@@ -13,22 +13,13 @@
     border: 1px solid yellow;
 }
 
-/* .top_div {
-    order: 1;
-    width: 80%;
-    height: 100px;
+#top_div {
+    flex-wrap: wrap;
+    overflow-y: scroll;
 }
 
-.bottom_div {
-    order: 2;
-    width: 20%;
-    height: 100px;
-} */
-.top_div {
-    order: 2;
-    width: 100%;
-    height: 80%;
-
+#top_div::-webkit-scrollbar {
+    display: none;
 }
 
 .bottom_div {
@@ -37,16 +28,52 @@
     height: 20%;
 }
 
-.video-thumbnail,
-.video-thumbnail>video {
-    height: 200px;
-    width: 200px;
+.all-users {
+    max-width: 100%;
+    max-height: 100%;
+
+    flex-wrap: wrap;
+    /* height: 100%;
+    width: 100%; */
+    justify-content: center;
+    display: flex;
+
 }
 
-.myVideo {
+.videoThumbnail {
     max-width: 70%;
     max-height: 70%;
-    height: auto;
-    width: auto;
+
+    width: fit-content;
     border-radius: 20px;
+    position: relative;
+    object-fit: contain;
+}
+
+.videoThumbnail>video {
+    height: fit-content;
+    width: 100%;
+    object-fit: contain;
+    border-radius: 20px;
+}
+
+.videoThumbnail>p {
+    position: absolute;
+    color: white;
+    bottom: 10px;
+    background-color: rgba(0, 0, 0, 0.4);
+    padding: 5px 20px;
+    border-radius: 5px;
+    left: 42%;
+
+}
+
+.myMicSpan {
+    position: absolute;
+    top: 0;
+    right: 0px;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.9);
+    margin: 10px;
+    border-radius: 60px;
 }
