--- a/src/Components/VideoConference/Videos/Videos.css
+++ b/src/Components/VideoConference/Videos/Videos.css
@@ -18,7 +18,8 @@
     overflow-y: scroll;
 }
 
-#top_div::-webkit-scrollbar {
+#top_div::-webkit-scrollbar,
+#bottom_div::-webkit-scrollbar {
     display: none;
 }
 
@@ -65,6 +66,19 @@
     padding: 5px 20px;
     border-radius: 5px;
     left: 42%;
+
+}
+
+.screen-share-div {
+    height: 100%;
+    width: 80%;
+    position: relative;
+}
+
+.screen-share-div>video {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
 
 }
 
