--- a/src/Components/VideoConference/Videos/Videos.css
+++ b/src/Components/VideoConference/Videos/Videos.css
@@ -9,6 +9,17 @@
     border: 1px solid red;
 }
 
+.nav_logo>a {
+    font-size: 30px;
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+}
+
+.nav_list_main>ul>li>a {
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+}
+
 .bor-y {
     border: 1px solid yellow;
 }
