--- a/src/Components/VideoConference/Videos/Videos.css
+++ b/src/Components/VideoConference/Videos/Videos.css
@@ -67,31 +67,125 @@
     width: 100%;
     object-fit: contain;
     border-radius: 20px;
+    max-height: 300px;
 }
 
 .videoThumbnail>p {
     position: absolute;
     color: white;
-    bottom: 10px;
+    bottom: 4px;
     background-color: rgba(0, 0, 0, 0.4);
-    padding: 5px 20px;
+    padding: 5px 0;
     border-radius: 5px;
-    left: 42%;
+    /* left: 42%; */
+    width: 100%;
+    border-radius: 0 0 20px 20px;
+
+    text-align: center;
 
 }
 
 .screen-share-div {
-    height: 100%;
-    width: 80%;
+    max-height: 100%;
+    max-width: 100%;
     position: relative;
 }
 
 .screen-share-div>video {
-    height: 100%;
-    width: 100%;
+    max-height: 100%;
+    max-width: 100%;
     object-fit: contain;
 
 }
+
+.screen-share-div:hover .request-remote {
+    display: flex;
+}
+
+.request-remote {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    display: none;
+    align-items: center;
+    color: white;
+    padding: 5px 10px;
+    font-weight: 800;
+    border-radius: 10px;
+    background-color: #d95240;
+    border: transparent;
+}
+
+.screen-share-div>.screen-share-remote-access {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    color: white;
+}
+
+.screen-share-name {
+
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    color: white;
+}
+
+.request-div {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: rgba(41, 41, 41, 0.9);
+
+}
+
+.request-div>p {
+    color: white;
+}
+
+.request-div>div {
+    width: 100%;
+    display: flex;
+    margin-top: 20px;
+    justify-content: space-around;
+}
+
+.request-div>div>button {
+
+    display: flex;
+    align-items: center;
+    color: white;
+    padding: 10px 15px;
+    font-weight: 800;
+    border-radius: 5px;
+    background-color: #d95240;
+    border: transparent;
+}
+
+.tempMouse {
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+
+    border-bottom: 5px solid rgb(240, 1, 1);
+    position: absolute;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 .myMicSpan {
     position: absolute;
@@ -101,4 +195,37 @@
     background-color: rgba(0, 0, 0, 0.9);
     margin: 10px;
     border-radius: 60px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.whiteboardComp,
+.screenshareComp {
+    height: 100%;
+    width: 100%;
+    text-align: -webkit-center;
+    position: relative;
+}
+
+.whiteboardInner,
+.screenshareInner {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 4;
+    /* background-color: rgba(0, 0, 0, 0.438); */
 }
