--- a/src/Components/AdminPanel/components/Login/Login.css
+++ b/src/Components/AdminPanel/components/Login/Login.css
@@ -1,7 +1,7 @@
 .login_main {
     width: 100%;
     height: 100%;
-    background: url("../../../../../Assets/front.webp");
+    background: url("../../../../Assets/front.webp");
     background-position: center;
     background-size: cover;
     display: flex;
